--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,12 @@ version = "3.0.1"
 
 [dependencies]
 rustc-serialize = {version = "0.3.22", optional = true}
-serde_json = {version = "1.0.2", optional = true}
+serde_json = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.0", optional = true }
 serde_yaml = {version = "0.7", optional = true}
 yaml-rust = {version = "0.4", optional = true}
+
+sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.0" }
+
 
 [features]
 with-rustc-serialize = ["rustc-serialize"]
