--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ version = "3.0.1"
 
 [dependencies]
 rustc-serialize = {version = "0.3.22", optional = true}
-serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
+serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" , optional = true}
 serde_yaml = {version = "0.7", optional = true}
 yaml-rust = {version = "0.4", optional = true}
 
